# meson-ctypes-test

./: .gitignore  LICENSE.txt  README.md  meson.build  pyproject.toml
example/: test.py
mypkg/: wrapper.py
pkgname/: wrapper.py
pkgname/c/include/: mylib.h
source/: mylib.c
source/include/: mylib.h
